--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -1,8 +1,8 @@
-403 Please Share
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <title>Please Share: Shareaza</title>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
  <style type="text/css">
 html, body {
 	margin: 0px;
@@ -22,16 +22,15 @@ a:hover {
 .header {
 	border: 0px;
 	border-bottom: 1px solid black;
-	background: #BE0000;
 	text-align: left;
 	font-weight: bold;
-	color: yellow;
+	margin: 0px;
+	padding: 0px;
 	}
-.header img { border: 0px; }
+.header img { border: 0px; margin-bottom: -3px;}
 .footer {
 	border: 0px;
 	border-top: 1px solid black;
-	background: #BE0000;
 	text-align: right;
 	font-size: 10px;
 	color: maroon;
@@ -39,13 +38,13 @@ a:hover {
  </style>
 </head>
 <body>
-
 <table style="height: 100%; width: 100%;" cellspacing="0">
 
 <tr style="height: 48px;">
-	<td class="header">
-		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" style="vertical-align: middle;" alt="SHAREAZA" /></a>
-		<span style="position: relative; top: 3px;">Please Share</span>
+	<td class="header" style="background-image: url('http://shareaza.sourceforge.net/images/top-tile.jpg');">
+		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/Top.png" alt="SHAREAZA"/></a>
+
+		<span style="position: relative; top: -20px; left: 10px;">Please Share</span>
 	</td>
 </tr>
 
@@ -55,38 +54,40 @@ a:hover {
 	<table width="100%">
 		<tr>
 			<td style="font-size: 13px; padding-left: 35px; padding-right: 35px;">
+
 				<h3>Please Share</h3>
 				<p>
-					Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden available upload resources.
+					Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden on available upload resources.
 				</p>
 
 				<p>
 					It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.
 				</p>
 				<br/>
+
 				<h3>Get Shareaza Now</h3>
 				<p>
 					Shareaza is the most powerful and feature-rich P2P client for Windows. And it's completely free. No ads, no spyware, no guilting you to upgrade to a commercial version.
 				</p>
 
 				<span style="font-size: 10px; position: relative; right: -5px;">
-					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" style="vertical-align: middle; border: 0px;" alt="S logo"/></a>
+					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/Shareaza.GIF" style="vertical-align: middle; border: 0px;" alt="S logo"/></a>
 					<span style="position: relative; right: -5px; bottom: -5px;"><a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a></span>
 				</span>
+
 				<br/><br/>
 			</td>
 		</tr>
 	</table>
 </td>
 </tr>
-<tr style="height: 48px;">
-	<td valign="middle" class="footer">
+<tr style="height: 25px;">
+	<td valign="middle" class="footer" style="background-image: url('http://shareaza.sourceforge.net/images/bot_02.jpg');">
 		<span style="margin-right: 8px;">Shareaza v<% Version %></span>
+
 	</td>
 </tr>
 </table>
 
 </body>
 </html>
-
-
